Analyze Sony TV mainboard

--- a/_config.yml
+++ b/_config.yml
@@ -123,3 +123,7 @@ friends:
     url: https://codeandlife.com
   - name: qwqmeow
     url: https://blog.meow.page
+
+watermark:
+  enable: true
+  textEnable: true
