--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "hexo-generator-json-content": "^4.2.3",
     "hexo-generator-tag": "^1.0.0",
     "hexo-helper-qrcode": "^1.0.2",
+    "hexo-images-watermark": "^2.3.0",
     "hexo-renderer-ejs": "^2.0.0",
     "hexo-renderer-less": "^4.0.0",
     "hexo-renderer-marked": "^5.0.0",
